testsuite/tests/saks/should_fail/saks_fail022.stderr

saks_fail022.hs:10:1: error:
    • Expected kind ‘(x, y)’, but ‘a’ has kind ‘k’
    • In the class declaration for ‘C’
